Fixed letter spacing

--- a/src/scss/styles/_mixins.scss
+++ b/src/scss/styles/_mixins.scss
@@ -169,6 +169,7 @@
   &.#{$style} {
     @include tm('cta') {
       &-button {
+        letter-spacing: 0 !important;
         @if $style == 'fill' {
 
           @content;
